﻿1/10/2015 0.8.8.0b-rv2
  Added recipes and lore for inscriber and assembler.
  Disabled craftable items in A.C.T.
  Added localization registry.
  Moved all ThE displayable strings to localization registry.

1/9/2015 0.8.8.0b-rv2
  Added Assembler model.
  Models now render in inventory.
  Added crafting effects.
  Terminal search bars no longer open with focus.
  Added Knowledge Inscriber icons.
  
1/8/2015 0.8.8.0b-rv2
  Fixes #106: Arcane items are now auto-craftable!
  Corrected centi-vis math.
  Added WAILA text to assembler.
  API Updated with ThE mod abbreviation.
  Assembler GUI now reflects active crafting job, and accepts upgrades.

1/7/2015 0.8.7.3a-rv2
  Knowledge Inscriber fully functional.
  Knowledge Inscriber now saves inventory, and drops Knowledge core when broken.
  Arcane Assembler can be linked with vis relay.
  Assembler GUI now reflects Vis amount.

1/4/2015 0.8.7.3a-rv2
  Added first bits of the Knowledge Inscriber.
  Fixes #110: Essentia gasses are now hidden from EC2. Requires EC2 version 2.2.24b44 or higher.

12/22/2014 0.8.7.3a-rv2
  Fixes #108: Added essentia creative cell. Set aspects in cell workbench.
  Maximum of 6 aspects enforced on AE items.

12/22/2014 0.8.7.2a-rv2
  Fixed storage bus recipe when Warded Arcana research is disabled.
  Added A.A. block, tile, and gui.
  Fixes #69: Final RV2 testing complete.

12/18/2014 0.8.7.2a-rv2
  Added Knowledge Core item.
  Began work on Arcane Assembler.

12/17/2014 0.8.7.2a-rv2
  A.C.T. can now see craftable items, but can not issue crafting jobs.

12/16/2014 0.8.7.2a-rv2
  Initial port to RV2
  Null return fix for grid block.
  Dupe fix for wireless terminal.
  Fixed unresponsive tooltip on sort buttons in A.C.T.

12/14/2014 0.8.7.2b-rv1
  Removed essentia gas dynamic texture generation.
  Abstracted the wireless terminal interface, and moved into API.

12/14/2014 0.8.7.1b
  Changed version number scheme: Release.Major.Minor.Bugfix
  Fixes #103: Warded glass recipes fixed.